Bug 1068123 - Make the MOZ_GCTIMER logs more verbose and readable; r=jonco