config/check_vanilla_allocations.py
@@ -95,7 +95,6 @@ def main():
         #r'posix_memalign',
         #r'aligned_alloc',
         r'valloc',
-        r'strdup'
     ]
 
     if args.aggressive:
@@ -103,7 +102,8 @@ def main():
             r'malloc',
             r'calloc',
             r'realloc',
-            r'free'
+            r'free',
+            r'strdup'
         ]
 
     # This is like alloc_fns, but regexp chars are not escaped.
